<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical"
    android:paddingHorizontal="25dp"
    tools:context=".Activity.LogLocation">

    <TextView
        android:id="@+id/TV_messageWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/fontTitle"
        android:textSize="@dimen/Title"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="5dp"
        android:background="@color/line" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_exam"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/messageLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/zen_regular"
        android:text="@string/messageHome"
        android:textAlignment="center"
        android:textColor="@color/fontTitle"
        android:textSize="@dimen/Subtile"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStart"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/warning"
        android:fontFamily="@font/zen_bold"
        android:text="@string/btnStartLog"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/Button"
        app:cornerRadius="5dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="5dp"
        android:background="@color/line" />

    <ListView
        android:id="@+id/mobile_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="NestedScrolling" />
</LinearLayout>

