<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/top"
    android:fillViewport="true"
    tools:context=".Activity.Register">

    <LinearLayout
        android:id="@+id/parentRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:src="@drawable/ic_resume_review"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/zen_bold"
                android:paddingBottom="5dp"
                android:text="@string/register"
                android:textColor="@color/fontTitle"
                android:textSize="@dimen/Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/zen_regular"
                android:text="@string/subRegister"
                android:textColor="@color/fontSubTitle"
                android:textSize="@dimen/Subtile" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="5dp"
                android:background="@color/line" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TI_nis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:boxBackgroundColor="@color/backgroudInput"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TE_nis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/NIS"
                    android:inputType="text"
                    android:textColor="@color/fontTitle"
                    android:textColorHint="@color/fontHint"
                    android:textSize="@dimen/Input"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TI_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:boxBackgroundColor="@color/backgroudInput"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TE_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/fontTitle"
                    android:textColorHint="@color/fontHint"
                    android:textSize="@dimen/Input"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TI_repeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:boxBackgroundColor="@color/backgroudInput"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TE_repeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/repeatPassword"
                    android:inputType="textPassword"
                    android:textColor="@color/fontTitle"
                    android:textColorHint="@color/fontHint"
                    android:textSize="@dimen/Input"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/btnColor"
                android:fontFamily="@font/zen_bold"
                android:paddingVertical="10dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/Button"
                app:cornerRadius="5dp"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnToLogin"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:paddingVertical="10dp"
                android:text="@string/kembaliLogin"
                android:textAllCaps="false"
                android:textColor="@color/textButtonColor"
                android:textSize="@dimen/TextButton"
                app:cornerRadius="5dp"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />


        </LinearLayout>


    </LinearLayout>

</ScrollView>