<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/top"
    android:fillViewport="true"
    tools:context=".Activity.Login">

    <LinearLayout
        android:id="@+id/parentLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sign_in"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/namaSekolah"
                android:textAlignment="center"
                android:textColor="@color/fontTitle"
                android:textSize="@dimen/Header" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="5dp"
                android:background="@color/line" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/formLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="25dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TI_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:boxBackgroundColor="@color/backgroudInput"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TE_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/NIS"
                    android:inputType="text"
                    android:textColor="@color/fontTitle"
                    android:textColorHint="@color/fontHint"
                    android:textSize="@dimen/Input"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TI_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:boxBackgroundColor="@color/backgroudInput"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TE_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/fontTitle"
                    android:textColorHint="@color/fontHint"
                    android:textSize="@dimen/Input"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMasuk"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/btnColor"
                android:fontFamily="@font/zen_bold"
                android:paddingVertical="10dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/Button"
                app:cornerRadius="5dp"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <ProgressBar
                android:id="@+id/PB_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:indeterminateTint="@color/info"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDaftar"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:paddingVertical="10dp"
                android:text="@string/daftar"
                android:textAllCaps="false"
                android:textColor="@color/textButtonColor"
                android:textSize="@dimen/TextButton"
                android:visibility="gone"
                app:cornerRadius="5dp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

